# claude-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUIDELINE.md  README.md  README_en.md  build.sh  install.sh  package.json  pyproject.toml  sdd-guideline.md
.claude/rules/: architecture.md  code-review.md  code-style.md  phase-plan-approach.md  testing.md
.github/workflows/: publish.yml
channel/: .env.example  lib.ts  package.json  server.ts
channel/__tests__/: flow.test.ts  lib.test.ts
data/output/: fix-phase1-result.txt  (+8 more)
docs/: RELEASE-NOTES-v0.3.0.md  architecture.md  onboarding-flow.md
plan/: OMC_INSPIRED_FEATURES.md  specs-packaging.md
research/: ARCHITECTURE_DECISION.md  DAEMON-ARCHITECTURE-INDEX.md  DESIGN.md  IMPLEMENTATION_GUIDE.md  README-DAEMON.md  README-TMUX-RESEARCH.md  REMOTE_TRIGGER_RESEARCH.md  RESEARCH_INDEX.md  RESEARCH_REPORT.md  RESEARCH_SUMMARY.txt  SUBPROCESS_RESEARCH_MANIFEST.md  TASK_QUEUE_COMPARISON.md  TASK_QUEUE_DECISIONS.md  TASK_QUEUE_DESIGN.md  TASK_QUEUE_IMPLEMENTATION.md  TASK_QUEUE_INDEX.txt  TASK_QUEUE_README.md  TASK_QUEUE_SUMMARY.txt  TMUX_RESEARCH_INDEX.md  TMUX_RESEARCH_SUMMARY.md  brainstorm-notes.md  daemon-architecture.md  daemon-decision-guide.md  daemon-implementation-guide.md  profile-system.md  subprocess-implementation-notes.md  subprocess-index.md  subprocess-quick-reference.md  subprocess-research.md  telegram-file-handling.md  tmux-quick-reference.md  tmux-session-management-research.md  tmux-task-routing-guide.md  tmux-trade-offs-analysis.md
specs/: 01-profile-system.md  02-context-generation.md  03-enhancement-system.md  04-agent-lifecycle.md  05-plugin-system.md  06-permission-system.md  07-channels.md  08-data-structures.md  09-error-handling.md  10-testing.md  MVP.md  README.md  SPECS.md  architecture-bridge-bot-prompt.md  bridge-bot-system-prompt.md  bridge-mcp-server.md
tests/: test_agent_md.py  test_branching.py  test_bridge_bot.py  test_bridge_cmd.py  test_channel.py  test_claude_md_init.py  test_cli.py  test_daemon.py  test_db.py  test_dispatcher.py  test_enhanced_feedback.py  test_hybrid_orchestrator.py  test_imp14_bridge_home.py  test_imp15_daemon.py  test_llm_judge.py  test_loop_cli.py  test_loop_evaluator.py  test_loop_orchestrator.py  test_mcp_server.py  test_memory.py  test_message_db.py  test_notify.py  test_on_complete.py  test_permissions.py  test_session.py  test_setup_wizard.py  test_telegram_loop.py  test_telegram_poller.py  test_tmux_session.py  test_watcher.py
(+108 files in other folders)
