[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-bridge"
version = "0.1.0"
description = "Multi-session Claude Code dispatch from Telegram"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
bridge-cli = "claude_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
